--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "webpack-dev-server": "^3.11.0"
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
