Update the runner image

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   web-deploy:
     name: Deploy
-    runs-on: ubuntu-test
+    runs-on: ubuntu-latest
     steps:
     - name: Get Latest Code
       uses: actions/checkout@v3
