--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Build Project
       run: |
         npm install
-        npm run build
+        CI=false npm run build
 
     - name: Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
