--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,3 +29,4 @@ jobs:
         password: ${{ secrets.GIT_CPANEL_REACT_PWD }}
         protocal: ${{ secrets.GIT_CPANEL_REACT_PROTOCOL }}
         local-dir: ./build/
+        server-dir: /usr/share/nginx/html/
