--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,10 +23,10 @@ jobs:
         CI=false npm run build
 
     - name: Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      uses: nogsantos/scp-deploy@master
       with:
-        server: ${{ secrets.GIT_CPANEL_REACT_SERVER }}
-        username: ${{ secrets.GIT_CPANEL_REACT_USER }}
-        password: ${{ secrets.GIT_CPANEL_REACT_PWD }}
-        protocal: ${{ secrets.GIT_CPANEL_REACT_PROTOCOL }}
-        local-dir: ./build/
+        host: ${{ secrets.GIT_CPANEL_REACT_SERVER }}
+        user: root
+        key: ${{ secrets.GIT_CPANEL_REACT_PWD }}
+        src: ./build/*
+        remote: /usr/share/nginx/html
